# ostis-message-decomposition-module

./: README.md
NonAtomicMessageDecompositionAgent/: CMakeLists.txt  NonatomicMessageDecompositionModule.cpp  NonatomicMessageDecompositionModule.hpp  NonatomicMessageDecompositionService.hpp
NonAtomicMessageDecompositionAgent/test/: CMakeLists.txt  test_defines.hpp.in  test_module.cpp
services/NonAtomicMessageDecompositionAgent/: NonAtomicMessageDecompositionAgent.py  NonAtomicMessageDecompositionModule.py  requirements.txt
services/NonAtomicMessageDecompositionAgent/test/: test.py
